cmake_minimum_required(VERSION 3.21)
project(neetcode150)

set(CMAKE_CXX_STANDARD 20)

add_executable(neetcode150 main.cpp interval.h common.h dfs.h recursion.h bfs.h backtrack.h graphs.h greedy.h arrayAndHash.h TwoPoints.h slidingWindow.h stack.h binarySearch.h linkedList.h trees.h tries.h heap&priorityQueue.h math&geometry.h bitManipulation.h dp.h)
